--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "package": "npm run build && cp package.json dist/package.json && npm pack",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "semantic-release": "semantic-release"
   },
   "repository": {
