--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,10 @@
     "declaration": true,
     "strict": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*", "package.json"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
