--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "version": "0.0.1",
   "description": "",
   "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
   "types": "./dist/types/index.d.js",
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "default": "./dist/esm/index.js"
+      "require": "./dist/cjs/index.js"
     }
   },
   "files": [
@@ -19,7 +17,7 @@
   "scripts": {
     "build": "npm run build:cjs && npm run build:esm && npm run build:types",
     "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
-    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json && cp config/package-esm.json dist/esm/package.json",
+    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
     "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
     "package": "npm run build && cp package.json dist/package.json && npm pack",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
@@ -97,7 +95,7 @@
     ]
   },
   "dependencies": {
-    "@open-oracle-origami/origami-js-sdk": "^1.6.0",
+    "@open-oracle-origami/origami-js-sdk": "^1.6.3",
     "ws": "^8.13.0"
   },
   "optionalDependencies": {
