--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,19 +1,9 @@
+# Reusable workflow for PRs; to eject, you can replace this file with
+# https://github.com/ryansonshine/ryansonshine/blob/main/.github/workflows/pr.yml
 name: Pull Request
+
 on: [pull_request]
+
 jobs:
   build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - run: npm run build
-      - run: npm test
-      - name: Upload Code Coverage
-        uses: codecov/codecov-action@v3
+    uses: ryansonshine/ryansonshine/.github/workflows/pr.yml@main
