--- a/config/tsconfig.cjs.json
+++ b/config/tsconfig.cjs.json
@@ -1,7 +1,8 @@
 {
-  "extends": "../tsconfig",
+  "extends": ["../tsconfig.build.json", "@tsconfig/node18/tsconfig"],
   "compilerOptions": {
-    "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "outDir": "../dist/cjs" /* Redirect output structure to the directory. */
+    "declaration": true,
+    "moduleResolution": "node",
+    "outDir": "../dist/cjs"
   }
 }
