--- a/config/tsconfig.esm.json
+++ b/config/tsconfig.esm.json
@@ -1,8 +1,9 @@
 {
-  "extends": "../tsconfig",
+  "extends": ["../tsconfig.build.json", "@tsconfig/esm/tsconfig"],
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "NodeNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "outDir": "../dist/esm" /* Redirect output structure to the directory. */
+    "declaration": true,
+    "moduleResolution": "node",
+    "outDir": "../dist/esm",
+    "verbatimModuleSyntax": false,
   }
 }
