--- a/config/tsconfig.types.json
+++ b/config/tsconfig.types.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../tsconfig",
+  "extends": "../tsconfig.build.json",
   "compilerOptions": {
-    "declaration": true /* Generates corresponding '.d.ts' file. */,
+    "declaration": true,
     "emitDeclarationOnly": true,
-    "outDir": "../dist/types" /* Redirect output structure to the directory. */
+    "outDir": "../dist/types"
   }
 }
